--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>jhuhuhg
+    <h1>Velkommen til nettside!</h1>
+   <p>Dette er en beskjed til alle mine følgere, stay black and smoke crack. </p>
 </body>
 </html>
