--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
     <title>Andreas Hjørnevik</title>
 </head>
+
 <body>
     <h1>Velkommen til nettside!</h1>
-   <p>Dette er en beskjed til alle mine følgere, stay black and smoke crack. </p>
-
+    <p>Dette er en beskjed til alle mine følgere, stay black and smoke crack. </p>
+    <p>blalallaallala</p>
 </body>
+
 </html>
